The days of the month, days of the week and the days are now aligned correctly. The days are now being displayed like a calendar.

--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -5,7 +5,7 @@
 .calender-container {
 
     border: 3px solid black;
-    width: 39vw;
+    width: 33vw;
 }
 
 a {
@@ -18,13 +18,13 @@ a {
 }
 
 .year {
-    text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     background-color: gray;
 }
 
 .daysOfTheWeek {
-    border: 1px solid black;
+    font-size: 15px;
+    padding: 3.7px;
 }
 
 .calendar-days {
@@ -32,19 +32,21 @@ a {
     background-color: #669999;
     border: 3px solid #c2c2c2;
     text-align: center;
-    /* /* vertical-align: center; */
+}
+
+th {
+    padding-left: 9px;
 }
 
 tr {
     display: flex;
     flex-wrap: wrap;
-    width: 33vw;
+    width: 32vw;
 
 }
 td {
-    
-    /* text-align: center; */
     border: 1px solid black;
-    padding: 2px 8px;
-    width: 4.5vw;
+    padding: 3px 4px;
+    width: 4.49vw;
+    font-size: 10px;
 }
